--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,55 @@
+
+* {
+    box-sizing: border-box;
+}
+
+header {
+    bottom:4px;
+    left: 0px;
+    right: 0px;
+    width:1535px;
+    background-color:powderblue;
+    padding: 5px;
+    text-align: center;
+    font-family:Roboto;
+    font-size: 35px;
+    color: white;
+}
+
 body {
     font-family: -system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     color: #c2c2c2;
     font-size: 20px;
     font-weight: 400;
     line-height: 1.6;
-    background-color:green;
-    /*background-image: url("TariqToon2.jpeg");*/
+    /*background-color:whitesmoke;*/
+    background-image: url("https://i.pinimg.com/originals/4b/22/82/4b228274da01093c0a8ca757d3bcfb7c.png");
     background-repeat: no-repeat;
     background-position: left top;
+    background-size: 100%;
     margin-right: 200px;
     background-attachment: fixed;
 }
 
-.container {
-    position: absolute;
-    top:0px;
-    bottom: 0px;
-    left:0px;
-    right: 0px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin:5vh;
-}
+/*.container {*/
+/*    position: absolute;*/
+/*    top:0px;*/
+/*    bottom: 0px;*/
+/*    left:0px;*/
+/*    right: 0px;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    margin:5vh;*/
+/*    background-color: red;*/
+/*}*/
+
+/*.bird-gif{*/
+
+/*    margin-left: 100px;*/
+/*}*/
+
 
 .img-container {
     flex: 1;
@@ -33,6 +59,13 @@ body {
     overflow-y: hidden;
     justify-content: center; /* align horizontal */
     align-items: center;
+}
+
+.Whiteboard{
+    background-color: powderblue;
+    flex-direction: column;
+
+
 }
 
 /*.img-container img{*/
@@ -51,7 +84,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 50px;
     background-color: white;
     margin-left: 10px;
 }
@@ -88,13 +120,15 @@ body {
 }
 
 footer {
-    position:absolute;
-    bottom:4px;
+
+    width:1535px;
+    background-color:powderblue;
     left: 0px;
     right: 0px;
     font-size: 14px;
     text-align: center;
     color: white;
+    padding: 50px;
 }
 
 .cartoon{
@@ -102,6 +136,19 @@ footer {
 }
 
 #user-image{
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
+}
+
+.section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+}
+
+.article {
+    -webkit-flex: 3;
+    -ms-flex: 3;
+    flex: 3;
+    background-color: #f1f1f1;
+    padding: 10px;
 }
